# chatbot-back

./: .env.example  .gitignore  README.md  pyproject.toml
alembic/: README.md
app/: main.py
app/api/: deps.py
app/api/v1/: chat.py
app/core/: config.py  logging.py
app/memory/: in_memory.py  sqlite_memory.py
app/persistence/: db.py  models.py  repositories.py
app/schemas/: chat.py
app/services/: chat_service.py
app/services/chain/: langchain_chat.py  prompt_templates.py
app/services/llm/: anthropic_client.py  base.py  local_llama.py  openai_client.py
app/tests/: conftest.py  test_chat_api.py  test_chat_service.py
docker/: Dockerfile
scripts/: dev_run.sh
