[tool.poetry]
name = "chatbot-backend"
version = "0.1.0"
description = "Backend de chatbot con FastAPI, LangChain y memoria modular"
authors = ["facusada <you@example.com>"]
readme = "README.md"
packages = [
  { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
langchain = "^0.1.14"
pydantic = "^2.6.4"
pydantic-settings = "^2.6.1"
sqlalchemy = "^2.0.28"
httpx = "^0.27.0"
python-dotenv = "^1.0.1"
langchain-openai = { version = "^0.1.1", optional = true }
langchain-anthropic = { version = "^0.1.0", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
ruff = "^0.3.5"

[tool.poetry.extras]
openai = ["langchain-openai"]
anthropic = ["langchain-anthropic"]

[build-system]
requires = ["poetry>=1.7.1"]
build-backend = "poetry.core.masonry.api"
